--- a/user/css/index.css
+++ b/user/css/index.css
@@ -515,7 +515,9 @@ section.banner .swiper-pagination .swiper-pagination-bullet-active {
 }
 .class_slide .swiper-button-prev{
     left: 0 !important;
+    top: 45%;
 }
 .class_slide .swiper-button-next{
     right: 0 !important;
+    top: 45%;
 }
