--- a/user/css/myclass.css
+++ b/user/css/myclass.css
@@ -144,8 +144,8 @@
 .finish:before,
 .finish:after {
   position: absolute;
-  left: 0;
-  right: 0;
+  left: -1px;
+  right: -1px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -155,7 +155,7 @@
 }
 .impending:before {
   content:'만료가 임박했어요 !';
-  top: -15px;
+  top: -23px;
   color: var(--highlight-s);
   font-size: 16px;
   font-weight: 700;
@@ -164,23 +164,14 @@
   content: "";
   top: 0;
   bottom: 22px;
-  background: rgba(168, 218, 216, 0.2);
-  border: 15px solid rgba(168, 218, 216, 0.7);
-}
-.finish:before {
-  content: "";
-  top: 0;
-  bottom: 22px;
-  background: rgba(69, 123, 157, 0.6);
-  color: #fff;
-  font-size: 20px;
-  font-weight: 700;
+  background: rgba(168, 218, 216, 0.05);
+  border: 15px solid rgba(168, 218, 216, 0.9);
 }
 .finish:after {
   content: "수강 완료";
   top: 0;
   bottom: 22px;
-  background: rgba(69, 123, 157, 0.6);
+  background: rgba(69, 123, 157, 0.8);
   color: #fff;
   font-size: 20px;
   font-weight: 700;
